# zkWasm-prover

./: Cargo.toml  README.md  build.rs
cuda/: bn254.cu  bn254.cuh  common.cuh  ec.cuh  ff.cu  ff.cuh  msm.cu  zprize_ec_wrapper.cuh  zprize_ff_wrapper.cuh
cuda/zprize/: carry_chain.cuh  common.cuh  ec.cuh  ff_config.cuh  ff_dispatch_st.cuh  ff_storage.cuh  host_math.cuh  memory.cuh  ptx.cuh
src/: analyze.rs  async_copy_queue.rs  buffer.rs  cuda.rs  cuda_allocator.rs  device.rs  eval_h.rs  eval_poly.rs  expr.rs  hugetlb.rs  lib.rs  lookup.rs  msm.rs  multiopen.rs  permutation.rs  pinned_page.rs  profile.rs  shuffle.rs
src/cuda/: bn254.rs  bn254_c.rs  ff.cu  ff.rs  field_op.rs  msm.rs  ntt.rs  test.rs
src/device/: cuda.rs
src/device/cuda/: buffer_allocator.rs
