[package]
name = "zkwasm-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific", default-features = true }
cuda-driver-sys = "0.3.0"
ark-std = { version = "0.4.0", features = ["print-trace"] }
lazy_static = "1.4.0"
thread_local = "*"

[build-dependencies]
cc = "*"

[patch."https://github.com/DelphinusLab/halo2-gpu-specific"]
halo2_proofs = { path = "../halo2-gpu-specific/halo2_proofs", default-features = true }
