[package]
name = "zkwasm-prover"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icicle-cuda-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag="v1.7.0" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag="v1.7.0" }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag="v1.7.0" }
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific", branch="zhangjunyu/para-synthesize", default-features = true }
cuda-runtime-sys = "0.3.0-alpha.1"
ark-std = { version = "0.4.0", features = ["print-trace"] }
lazy_static = "1.4.0"
libc = "0.2.153"
rayon = "1.8.1"
thread_local = "1.1.7"
rand = "0.8.5"
ec-gpu-gen = { git = "https://github.com/lanbones/ec-gpu", branch = "halo2-opt-v2", optional = true }

[build-dependencies]
cc = "1.0.83"

[features]
default = ["halo2_proofs/cuda"]
hugetlb = []
